Update to 1.21.9 and fix deprecations